first_ec2.tf
/*
provider "aws" {
  region     = "us-east-1"
  access_key = ""
  secret_key = ""
}

resource "aws_instance" "myec2" {
    ami = "ami-05e411cf591b5c9f6"
    instance_type = var.instancetype
    
}
*/
